WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169801
AX: VoiceOver no longer works corectly with editable text in the web
https://bugs.webkit.org/show_bug.cgi?id=169801
Summary
AX: VoiceOver no longer works corectly with editable text in the web
Nan Wang
Reported
2017-03-16 18:13:42 PDT
Cannot type in content using VoiceOver on mac when the input tag has placeholder. <
rdar://problem/30941566
>
Attachments
patch
(11.62 KB, patch)
2017-03-16 18:22 PDT
,
Nan Wang
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2017-03-16 18:22:28 PDT
Created
attachment 304733
[details]
patch
chris fleizach
Comment 2
2017-03-17 12:29:24 PDT
Comment on
attachment 304733
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304733&action=review
> Source/WebCore/ChangeLog:12 > + And also only enter text controls when navigating by characters/indexes, so that both Mac and
Shouldn't start sentences with And. "Also, we only enter text"
Nan Wang
Comment 3
2017-03-17 12:48:40 PDT
Committed
r214112
: <
http://trac.webkit.org/changeset/214112
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug