AX: VoiceOver no longer works corectly with editable text in the web https://bugs.webkit.org/show_bug.cgi?id=169801

Reviewed by Chris Fleizach.

Source/WebCore:

The issue is that since we are entering text controls when getting the text marker,
the end text marker of the input tag might associate to the placeholder div instead of
the input tag itself.
Fixed the issue by checking the shadow elements using shadowHost() instead of isShadowRoot().
Also, only enter text controls when navigating by characters/indexes, so that both Mac and
iOS will get the correct text marker ranges for shadow host elements.

Tests: accessibility/ios-simulator/element-text-range-for-text-control.html
       accessibility/mac/text-markers-for-input-with-placeholder.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::traverseToOffsetInRange):
(WebCore::AXObjectCache::startOrEndCharacterOffsetForRange):
(WebCore::AXObjectCache::characterOffsetForIndex):
* accessibility/AXObjectCache.h:

LayoutTests:

* accessibility/ios-simulator/element-text-range-for-text-control-expected.txt: Added.
* accessibility/ios-simulator/element-text-range-for-text-control.html: Added.
* accessibility/mac/text-markers-for-input-with-placeholder-expected.txt: Added.
* accessibility/mac/text-markers-for-input-with-placeholder.html: Added.


Canonical link: https://commits.webkit.org/186772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214112 268f45cc-cd09-0410-ab3c-d52691b4dbfc